# webtransportify

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  server.js  sw.js
.github/workflows/: build.yml
demo/: index.html  sw.js
functions/webtransportify/: hostname.ts
functions/webtransportify/certificates/: [domain].ts  index.ts
functions/webtransportify/tunnels/: index.ts
functions/webtransportify/tunnels/[id]/: [token].ts
functions/webtransportify/tunnels/[id]/[token]/: index.ts
public/: 403.html  index.html  sw.js  wt.js
public/webtransportify/: 104.html  403.html  internals.html  wt.js
src/: cert.rs  cli.rs  client.rs  main.rs
