[package]
name = "webtransportify"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
reqwest = { version="0.12.7", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
wtransport = "0.2.0"
x509-parser = "0.16.0"
